@@ -35,7 +35,6 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.util.MockFlowFile;
@@ -169,7 +168,7 @@ public class GetSmbFileTest {
     @Test
     public void testOpenFileCalled() {
         FileIdBothDirectoryInformation file1 = mockFile(DIRECTORY, "file1.txt", "abc");
-        mockDir(DIRECTORY, new ArrayList<FileIdBothDirectoryInformation>(){{
+        mockDir(DIRECTORY, new ArrayList<>(){{
             add(file1);
         }});
         testRunner.run();
@@ -182,7 +181,7 @@ public class GetSmbFileTest {
         testRunner.setProperty(GetSmbFile.IGNORE_HIDDEN_FILES, "true");
         FileIdBothDirectoryInformation file1 = mockFile(DIRECTORY, "file1.txt", "abc", FileAttributes.FILE_ATTRIBUTE_HIDDEN.getValue());
         FileIdBothDirectoryInformation file2 = mockFile(DIRECTORY, "file2.txt", "abc", FileAttributes.FILE_ATTRIBUTE_NORMAL.getValue());
-        mockDir(DIRECTORY, new ArrayList<FileIdBothDirectoryInformation>(){{
+        mockDir(DIRECTORY, new ArrayList<>(){{
             add(file1);
             add(file2);
         }});
@@ -194,7 +193,7 @@ public class GetSmbFileTest {
     @Test
     public void testFileFilter() {
         testRunner.setProperty(GetSmbFile.FILE_FILTER, "file[0-9]\\.txt");
-        mockDir(DIRECTORY, new ArrayList<FileIdBothDirectoryInformation>(){{
+        mockDir(DIRECTORY, new ArrayList<>(){{
             add(mockFile(DIRECTORY, "something_else.txt", "abc"));
             add(mockFile(DIRECTORY, "file1.txt", "abc"));
             add(mockFile(DIRECTORY, "file2.txt", "abc"));
@@ -210,10 +209,10 @@ public class GetSmbFileTest {
     public void testNonRecurse() {
         testRunner.setProperty(GetSmbFile.RECURSE, "false");
         String subdir = DIRECTORY + "\\subdir1";
-        mockDir(DIRECTORY, new ArrayList<FileIdBothDirectoryInformation>(){{
+        mockDir(DIRECTORY, new ArrayList<>(){{
             add(mockFile(DIRECTORY, "file1.txt", "abc"));
             add(mockFile(DIRECTORY, "file2.txt", "abc"));
-            add(mockDir(subdir, new ArrayList<FileIdBothDirectoryInformation>(){{
+            add(mockDir(subdir, new ArrayList<>(){{
                 add(mockFile(subdir, "file3.txt", "abc"));
             }}));
         }});
@@ -229,10 +228,10 @@ public class GetSmbFileTest {
     public void testRecurse() {
         testRunner.setProperty(GetSmbFile.RECURSE, "true");
         String subdir = DIRECTORY + "\\subdir1";
-        mockDir(DIRECTORY, new ArrayList<FileIdBothDirectoryInformation>(){{
+        mockDir(DIRECTORY, new ArrayList<>(){{
             add(mockFile(DIRECTORY, "file1.txt", "abc"));
             add(mockFile(DIRECTORY, "file2.txt", "abc"));
-            add(mockDir(subdir, new ArrayList<FileIdBothDirectoryInformation>(){{
+            add(mockDir(subdir, new ArrayList<>(){{
                 add(mockFile(subdir, "file3.txt", "abc"));
             }}));
         }});
@@ -252,14 +251,14 @@ public class GetSmbFileTest {
         String subdir1 = DIRECTORY + "\\subdir1";
         String subdir2 = DIRECTORY + "\\subdir2";
         String subdir3 = DIRECTORY + "\\foo";
-        mockDir(DIRECTORY, new ArrayList<FileIdBothDirectoryInformation>(){{
-            add(mockDir(subdir1, new ArrayList<FileIdBothDirectoryInformation>(){{
+        mockDir(DIRECTORY, new ArrayList<>(){{
+            add(mockDir(subdir1, new ArrayList<>(){{
                 add(mockFile(subdir1, "file1.txt", "abc"));
             }}));
-            add(mockDir(subdir2, new ArrayList<FileIdBothDirectoryInformation>(){{
+            add(mockDir(subdir2, new ArrayList<>(){{
                 add(mockFile(subdir2, "file2.txt", "abc"));
             }}));
-            add(mockDir(subdir3, new ArrayList<FileIdBothDirectoryInformation>(){{
+            add(mockDir(subdir3, new ArrayList<>(){{
                 add(mockFile(subdir3, "file3.txt", "abc"));
             }}));
         }});
@@ -295,7 +294,7 @@ public class GetSmbFileTest {
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(GetSmbFile.REL_SUCCESS);
         final List<String> flowFileNames = flowFiles.stream()
                 .map(flowFile -> flowFile.getAttribute(CoreAttributes.FILENAME.key()))
-                .collect(Collectors.toList());
+                .toList();
 
         for (int i = 0; i < totalSize; i++) {
             final String flowFileName = flowFileNames.get(0);
